--- a/css/style.css
+++ b/css/style.css
@@ -207,23 +207,138 @@ button {  width: auto; overflow: visible; }
 .clearfix { zoom: 1; }
 
 
-
-
-
-
  /* Primary Styles
-    Author: 
+    Author: Simon H. Eskildsen (sirupsen.com)
  */
 
+body {
+  font-family: Georgia, serif;
+  font-size: 16px;
+  line-height: 24px;
+  
+  /* Use body as wrapper: camendesign.com/code/developpeurs_sans_frontieres */
+  width: 600px;
+  margin: 20px auto;
+}
 
+h1 { 
+  font-size 220%; 
+  line-height: 1.25em;
+}
 
+h2 { 
+  font-size: 160%;
+  line-height: 1.20em;
+}
 
+h3 {
+  font-size: 130%;
+  line-height: 1.10em;
+}
 
+p {
+  margin: 12px 0 12px 0;
+}
 
+a {
+  color: #06A;
+  text-decoration: none;
+}
 
+a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 
+blockquote {
+  margin: 24px 0 24px 24px;
+  color: #999;
+  font-style: italic;
+  border-left: 2px solid #EEE;
+  padding-left: 1em; 
+}
 
+code {
+  font-size: 90%;
+  font-family: Monaco, Consolas, monospace;
+}
 
+pre {
+  background-color: #F8F8F8;
+  border: 1px solid #EEE;
+  color: #000;
+  display: block;
+  line-height: 150%;
+  overflow: auto;
+  padding: 1em;
+  margin: 24px 0 24px 0;
+}
+
+hr {
+  border: 0;
+  height: 3px;
+  background-color: #ddd;
+}
+
+/*
+ * Forms
+ *
+*/
+
+label {
+  display: block;
+  margin-top: 10px;
+}
+
+input, textarea {
+  border: 1px solid #ddd;
+  font-family: Helvetica, Arial, Verdana, sans-serif;
+  background: -webkit-gradient(linear, 0% 0%, 0% 25, from(white), color-stop(0.04, #f7f7f7), to(white));
+  border-radius: 3px;
+  padding: 5px;
+}
+
+textarea {
+  width: 300px;
+  height: 100px;
+  line-height: 1.6;
+  padding: 8px;
+}
+
+input:focus, textarea:focus {
+  border-color: #06A;
+}
+
+input:hover, textarea:hover {
+  border-color: #06A;
+}
+
+input[type=text] {
+  padding: 5px;
+}
+
+input[type=submit] {
+  display: block;
+  cursor: pointer;
+}
+
+/*
+ * tables
+ */
+
+table thead th {
+  border: 1px solid #ddd;
+  padding: 5px 24px 5px 24px;
+}
+
+table tr {
+  border: 1px solid #ddd;
+}
+
+table tr td {
+  border: 1px solid #ddd;
+  padding: 5px 24px 5px 24px;
+}
 
 /* 
  * print styles
